# codepipeline-test

./: README.md  lambda_function.py  setup.cfg
.github/workflows/: Dockerfile  azure-functions-app-python.yml  docker-publish.yml
package/: geospriteo_catalog-1.0.0-py3.9-nspkg.pth
package/Fiona-1.9.3.dist-info/: RECORD
package/charset_normalizer-3.1.0.dist-info/: RECORD
package/geosprite/eo/catalog/: __init__.py  imagecollection.py  stac.py
package/geospriteo_catalog-1.0.0.dist-info/: METADATA  RECORD  direct_url.json  namespace_packages.txt
package/pystac-1.7.3.dist-info/: RECORD
package/pystac_client-0.6.1.dist-info/: RECORD
src/geosprite/eo/: dtypes.py
src/geosprite/eo/catalog/: imagecollection.py  stac.py
src/geospriteo_catalog.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
