[metadata]
name = geospriteo-catalog
version = 1.0.0
author = Jia Song
author_email = geosprite2020@gmail.com

[options]
zip_safe = False
install_requires =
    pystac
    pystac-client
    arrow
    fiona
python_requires = >=3.7
namespace_packages = geosprite.eo
package_dir =
    =src
packages = find_namespace:
include_package_data = True

[options.packages.find]
where = src
